2010-07-27  Jaroslav Hajek  <highegg@gmail.com>

	* lapack-xtra/zrsf2csf.f, lapack-xtra/crsf2csf.f: New sources.
	* lapack-xtra/module.mk: Add them.

2010-05-04  John W. Eaton  <jwe@octave.org>

	* villad/dfopr.f, villad/dif.f, villad/intrp.f, villad/jcobi.f,
	villad/radau.f, villad/vilerr.f, villad/module.mk: Delete.
	* Makefile.am: Don't include villad/module.mk.

2010-04-11  Jaroslav Hajek  <highegg@gmail.com>

	* blas-xtra/cmatm3.f, blas-xtra/zmatm3.f,
	blas-xtra/dmatm3.f, blas-xtra/xsdot.f: Fix typos. Add missing
	decls.

2010-03-21  John W. Eaton  <jwe@octave.org>

	* Makefile.am (libcruft_la_LIBADD): Include ../libgnu/libgnu.la
	in the list.  From Marco Atzeri <marco_atzeri@yahoo.it>.

2010-03-15  John W. Eaton  <jwe@octave.org>

	* Makefile.am (libcruft_la_CPPFLAGS): Append $(AM_CPPFLAGS).

2010-03-03  Jaroslav Hajek  <highegg@gmail.com>

	* blas-xtra/cconv2.f, blas-xtra/csconv2.f, blas-xtra/dconv2.f,
	blas-xtra/sconv2.f, blas-xtra/zconv2.f, blas-xtra/zdconv2.f:
	New sources.
	* blas-xtra/module.mk: Add them here.

2010-03-02  John W. Eaton  <jwe@octave.org>

	* misc/cquit.c (octave_restore_signal_mask): Assume we have
	POSIX signal handling.

2010-02-28  Jaroslav Hajek  <highegg@gmail.com>

	* misc/lo-error.c (liboctave_fatal_with_id,
	set_liboctave_error_with_id_handler): New functions.
	(current_liboctave_error_with_id_handler): New variable.
	* misc/lo-error.h: Declare them.
	(liboctave_error_with_id_handler): New typedef.

2010-02-21  Michael Goffioul  <michael.goffioul@gmail.com>

	* misc/quit.h: Define WIN32_LEAN_AND_MEAN and don't #undef min/max.

	* Makefile.am: Add -bindir option to libcruft_la_LDFLAGS.

2010-02-17  John W. Eaton  <jwe@octave.org>

	* Makefile.am (libcruft_la_LIBADD): Include libranlib.la in the list.
	(noinst_LTLIBRARIES, libranlib_la_SOURCES, libranlib_la_DEPENDENCIES,
	libcruft_la_FFLAGS): New variables.
	(ranlib.def): New target.
	(DISTCLEANFILES): Also remove ranlib.def.
	* ranlib/module.mk (libranlib_la_SOURCES): Rename from